--- a/styleV2.css
+++ b/styleV2.css
@@ -92,8 +92,8 @@ h1 {
 #delete { grid-area: delete; }
 
 #one, #two, #three, #four, #five, #six, #seven, #eight, #nine, #dot{
-    height: 80px;
-    width: 80px;
+    height: 100%;
+    width: 100%;
     color: black;
     background-color: #1fbfb8;
     border-radius: 50%;
